Rendering form for updating passowrd

--- a/src/pages/profile/components/profile-password/profile-password.html
+++ b/src/pages/profile/components/profile-password/profile-password.html
@@ -1,1 +1,28 @@
- {{ currentUser.authorities |json}}
+<div>
+  <div class="inputLabel">
+    <span [translate]="'Old password'"></span>
+  </div>
+  <div class="input-field-container'">
+    <password-input (onChange)="updateValue($event)" [dataElementId]="'oldPassword'" [categoryOptionComboId]="'password'" [data]="dataObject"
+      [barcodeSettings]="barcodeSettings"></password-input>
+  </div>
+</div>
+<div>
+  <div class="inputLabel">
+    <span [translate]="'New password'"></span>
+  </div>
+  <div class="input-field-container'">
+    <password-input (onChange)="updateValue($event)" [dataElementId]="'newPassword'" [categoryOptionComboId]="'password'" [data]="dataObject"
+      [barcodeSettings]="barcodeSettings"></password-input>
+  </div>
+</div>
+<div>
+  <div class="inputLabel">
+    <span [translate]="'New password confirmation'"></span>
+  </div>
+  <div class="input-field-container'">
+    <password-input (onChange)="updateValue($event)" [dataElementId]="'newPasswordConfirmation'" [categoryOptionComboId]="'password'"
+      [data]="dataObject" [barcodeSettings]="barcodeSettings"></password-input>
+  </div>
+
+</div>
