take all values from componets for change user password to profile constainer

--- a/src/pages/profile/components/profile-password/profile-password.html
+++ b/src/pages/profile/components/profile-password/profile-password.html
@@ -1,28 +1,15 @@
-<div>
-  <div class="inputLabel">
-    <span [translate]="'Old password'"></span>
-  </div>
-  <div class="input-field-container'">
-    <password-input (onChange)="updateValue($event)" [dataElementId]="'oldPassword'" [categoryOptionComboId]="'password'" [data]="dataObject"
-      [barcodeSettings]="barcodeSettings"></password-input>
-  </div>
-</div>
-<div>
-  <div class="inputLabel">
-    <span [translate]="'New password'"></span>
-  </div>
-  <div class="input-field-container'">
-    <password-input (onChange)="updateValue($event)" [dataElementId]="'newPassword'" [categoryOptionComboId]="'password'" [data]="dataObject"
-      [barcodeSettings]="barcodeSettings"></password-input>
-  </div>
-</div>
-<div>
-  <div class="inputLabel">
-    <span [translate]="'New password confirmation'"></span>
-  </div>
-  <div class="input-field-container'">
-    <password-input (onChange)="updateValue($event)" [dataElementId]="'newPasswordConfirmation'" [categoryOptionComboId]="'password'"
-      [data]="dataObject" [barcodeSettings]="barcodeSettings"></password-input>
-  </div>
+<div *ngIf=formFields>
 
+  <div *ngFor="let field of formFields;trackBy: trackByFn">
+    <div class="inputLabel">
+      <span [translate]="field.displayName"></span>
+    </div>
+    <div class="input-field-container">
+      <password-input (onChange)="updateValue($event,field.id)" [dataElementId]="field.id" [categoryOptionComboId]="'field'" [data]="dataObject"
+        [barcodeSettings]="barcodeSettings"></password-input>
+    </div>
+  </div>
+  <button [disabled]="!(isPasswordFormValid && isUserPasswordUpdateProcessActive)" ion-button full text-capitalize (tap)="updatePassword()">
+    <span [translate]="'Update password'"></span>
+  </button>
 </div>
