Implement password verifications on change password component

--- a/src/pages/profile/components/profile-password/profile-password.html
+++ b/src/pages/profile/components/profile-password/profile-password.html
@@ -1,5 +1,4 @@
-<div *ngIf=formFields>
-
+<form *ngIf=formFields>
   <div *ngFor="let field of formFields;trackBy: trackByFn">
     <div class="inputLabel">
       <span [translate]="field.displayName"></span>
@@ -12,4 +11,4 @@
   <button [disabled]="!(isPasswordFormValid && isUserPasswordUpdateProcessActive)" ion-button full text-capitalize (tap)="updatePassword()">
     <span [translate]="'Update password'"></span>
   </button>
-</div>
+</form>
