Enable and disable change pawword button as well as lable on if form is ready or on clike update password button

--- a/src/pages/profile/components/profile-password/profile-password.html
+++ b/src/pages/profile/components/profile-password/profile-password.html
@@ -8,7 +8,8 @@
         [barcodeSettings]="barcodeSettings"></password-input>
     </div>
   </div>
-  <button [disabled]="!(isPasswordFormValid && isUserPasswordUpdateProcessActive)" ion-button full text-capitalize (tap)="updatePassword()">
-    <span [translate]="'Update password'"></span>
+  <button [disabled]="!isPasswordFormValid || isUserPasswordUpdateProcessActive" ion-button full text-capitalize (tap)="updatePassword()">
+    <span *ngIf="!isUserPasswordUpdateProcessActive" [translate]="'Update password'"></span>
+    <span *ngIf="isUserPasswordUpdateProcessActive" [translate]="'Updating password'"></span>
   </button>
 </form>
