Implements hide field and hide sections action for non-d2 functions program rules on event capture

--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -20,38 +20,35 @@
         {{ translationMapper['Coordinate']}}
         <event-coordinate-selector (onChangeEventCoordonate)="updateEventCoordonate($event)" [(coordinate)]="currentEvent.coordinate"></event-coordinate-selector>
       </div>
-
-      <div class="item-card"> hiddenFields : {{ hiddenFields|json }}</div>
-      <div class="item-card"> hiddenSections : {{ hiddenSections|json }}</div>
-      <div class="item-card"> hiddenProgramStages : {{ hiddenProgramStages|json }}</div>
-
-      <div *ngIf="(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
-        <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
-          <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
-            [dataUpdateStatus]="dataUpdateStatus" [programStageDataElements]="programStage.programStageDataElements" [programStageId]="programStage.id"
-            (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
-        </div>
-        <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
-          <default-event-entry-form [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
-            (onChange)="updateData($event)"></default-event-entry-form>
-        </div>
-        <ion-row no-padding>
-          <ion-col>
-            <div class="item-card" color="font-color" ion-button clear text-justify (click)="goBack()">
-              <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Back']}}
-            </div>
-          </ion-col>
-          <ion-col col-auto>
-            <div *ngIf="canEventBeDeleted()" float-right>
-              <div class="item-card" color="font-color" ion-button clear text-justify (click)="AddNewEvent()">
-                <ion-icon name="add" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Add New']}}
+      <div *ngIf="(programStage && programStage.id && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+        <div *ngIf="!hiddenProgramStages[programStage.id]">
+          <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
+            <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
+              [dataUpdateStatus]="dataUpdateStatus" [programStageDataElements]="programStage.programStageDataElements" [programStageId]="programStage.id"
+              (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
+          </div>
+          <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
+            <default-event-entry-form [hiddenSections]="hiddenSections" [hiddenFields]="hiddenFields" [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
+              (onChange)="updateData($event)"></default-event-entry-form>
+          </div>
+          <ion-row no-padding>
+            <ion-col>
+              <div class="item-card" color="font-color" ion-button clear text-justify (click)="goBack()">
+                <ion-icon name="Back" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Back']}}
               </div>
-              <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
-                <ion-icon name="trash"></ion-icon>&nbsp; {{ translationMapper['Delete']}}
+            </ion-col>
+            <ion-col col-auto>
+              <div *ngIf="canEventBeDeleted()" float-right>
+                <div class="item-card" color="font-color" ion-button clear text-justify (click)="AddNewEvent()">
+                  <ion-icon name="add" color="icon-color"></ion-icon>&nbsp; {{ translationMapper['Add New']}}
+                </div>
+                <div class="item-card" color="danger" ion-button clear text-justify (click)="deleteEvent(currentEvent.id)">
+                  <ion-icon name="trash"></ion-icon>&nbsp; {{ translationMapper['Delete']}}
+                </div>
               </div>
-            </div>
-          </ion-col>
-        </ion-row>
+            </ion-col>
+          </ion-row>
+        </div>
       </div>
       <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
         <notification [message]="translationMapper['There are no data elements, please contact you help desk']"></notification>
