--- a/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
+++ b/src/pages/event-capture/components/default-event-entry-form/default-event-entry-form.html
@@ -1,32 +1,37 @@
 <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length > 0">
   <div *ngFor="let programStageSection of programStage.programStageSections;trackBy: trackByFn" class="section-container">
-    <table width="100%" *ngIf="programStageSection">
-      <tbody>
-        <tr (click)="toggleSection(programStageSection.id)">
-          <td [ngStyle]="{'background-color': '#F4F4F4'}">
-            {{ programStageSection.displayName }}
-          </td>
-        </tr>
-        <tr *ngIf="programStageSection.dataElements && isSectionOpen[programStageSection.id]">
-          <td>
-            <div text-left>
-              <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
-                <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
-                  (onChange)="updateData($event)"></event-input-container>
+    <div *ngIf="programStageSection && programStageSection.id && hiddenSections && !hiddenSections[programStageSection.id]">
+      <table width="100%">
+        <tbody>
+          <tr (click)="toggleSection(programStageSection.id)">
+            <td [ngStyle]="{'background-color': '#F4F4F4'}">
+              {{ programStageSection.displayName }}
+            </td>
+          </tr>
+          <tr *ngIf="programStageSection.dataElements && isSectionOpen[programStageSection.id]">
+            <td>
+              <div text-left>
+                <div *ngFor="let dataElement of programStageSection.dataElements;trackBy: trackByFn">
+                  <event-input-container [dataElement]="dataElement" [currentUser]="currentUser" [(data)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
+                    (onChange)="updateData($event)"></event-input-container>
+                </div>
               </div>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 <div *ngIf="programStage.programStageSections && programStage.programStageSections  && programStage.programStageSections.length == 0">
   <div *ngIf="programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0 ">
     <div *ngFor="let programStageDataElement of programStage.programStageDataElements;trackBy: trackByFn">
       <div *ngIf="programStageDataElement.dataElement && programStageDataElement.dataElement.id">
-        <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObject"
-          [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory" (onChange)="updateData($event)"></event-input-container>
+        <div *ngIf="hiddenFields && !hiddenFields[programStageDataElement.dataElement.id]">
+          <event-input-container [dataElement]="programStageDataElement.dataElement" [currentUser]="currentUser" [(data)]="dataObject"
+            [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" [mandatory]="programStageDataElement.compulsory"
+            (onChange)="updateData($event)"></event-input-container>
+        </div>
       </div>
     </div>
   </div>
