Fixing evaluation of program rules on changes as well as on register or edit event for both tracker and event capture

--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -28,8 +28,8 @@
               (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
           </div>
           <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
-            <default-event-entry-form [hiddenSections]="hiddenSections" [hiddenFields]="hiddenFields" [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
-              (onChange)="updateData($event)"></default-event-entry-form>
+            <default-event-entry-form [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields" [programStage]="programStage" [currentUser]="currentUser"
+              [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass" (onChange)="updateData($event)"></default-event-entry-form>
           </div>
           <ion-row no-padding>
             <ion-col>
@@ -50,9 +50,9 @@
           </ion-row>
         </div>
       </div>
-      <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
-        <notification [message]="translationMapper['There are no data elements, please contact you help desk']"></notification>
-      </div>
+    </div>
+    <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+      <notification [message]="translationMapper['There are no data elements, please contact you help desk']"></notification>
     </div>
   </div>
 </div>
