--- a/src/pages/tracker-capture/components/tracker-event-container/tracker-event-container.html
+++ b/src/pages/tracker-capture/components/tracker-event-container/tracker-event-container.html
@@ -23,20 +23,21 @@
 
 </div>
 <div *ngIf="currentOpenEvent['eventDate'] && currentOpenEvent['eventDate'] !=''">
-  <div *ngIf="(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
-    <div *ngIf="programStage.captureCoordinates" class="item-card">
-      {{ translationMapper['Coordinate']}}
-      <event-coordinate-selector (onChangeEventCoordonate)="updateEventCoordonate($event)" [(coordinate)]="currentOpenEvent.coordinate"></event-coordinate-selector>
-    </div>
-    <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
-      <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
-        [dataUpdateStatus]="dataUpdateStatus" [programStageDataElements]="programStage.programStageDataElements" [programStageId]="programStage.id"
-        (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
-    </div>
-    <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
-      <default-event-entry-form [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
-        (onChange)="updateData($event)"></default-event-entry-form>
-
+  <div *ngIf="(programStage && programStage.id && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
+    <div *ngIf="!hiddenProgramStages[programStage.id]">
+      <div *ngIf="programStage.captureCoordinates" class="item-card">
+        {{ translationMapper['Coordinate']}}
+        <event-coordinate-selector (onChangeEventCoordonate)="updateEventCoordonate($event)" [(coordinate)]="currentOpenEvent.coordinate"></event-coordinate-selector>
+      </div>
+      <div *ngIf="formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' ">
+        <custom-data-entry-form [entryFormType]="entryFormType" [dataEntryFormDesign]="programStage.dataEntryForm" [data]="dataObject"
+          [dataUpdateStatus]="dataUpdateStatus" [programStageDataElements]="programStage.programStageDataElements" [programStageId]="programStage.id"
+          (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
+      </div>
+      <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
+        <default-event-entry-form [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields" [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
+          (onChange)="updateData($event)"></default-event-entry-form>
+      </div>
     </div>
   </div>
   <div *ngIf="!(programStage && programStage.programStageDataElements && programStage.programStageDataElements.length > 0)">
