Passing message either warning or error based on program rule action

--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -28,8 +28,8 @@
               (onCustomFormInputChange)="updateData($event)"></custom-data-entry-form>
           </div>
           <div *ngIf="!(formLayout === 'customLayout' && programStage && programStage.dataEntryForm && programStage.dataEntryForm !== '' )">
-            <default-event-entry-form [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields" [programStage]="programStage"
-              [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
+            <default-event-entry-form [(errorOrWarningMessage)]="errorOrWarningMessage" [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields"
+              [programStage]="programStage" [currentUser]="currentUser" [(dataObject)]="dataObject" [(dataValuesSavingStatusClass)]="dataValuesSavingStatusClass"
               (onChange)="updateData($event)"></default-event-entry-form>
           </div>
           <ion-row no-padding>
