--- a/src/pages/tracker-capture/components/tracker-registration-form/tracker-registration-form.html
+++ b/src/pages/tracker-capture/components/tracker-registration-form/tracker-registration-form.html
@@ -10,6 +10,10 @@
           <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
             [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass" [mandatory]="programTrackedEntityAttribute.mandatory"
             (onChange)="updateData($event)"></tracked-entity-inputs>
+          <div *ngIf="errorOrWarningMessage[programTrackedEntityAttribute.trackedEntityAttribute.id]">
+            <program-rule-action-message [programRuleActionMessage]="errorOrWarningMessage[programTrackedEntityAttribute.trackedEntityAttribute.id]"
+              [isEventCompleted]="isEventCompleted"></program-rule-action-message>
+          </div>
         </div>
       </div>
     </form>
