--- a/src/pages/event-capture/components/program-rule-action-message/program-rule-action-message.html
+++ b/src/pages/event-capture/components/program-rule-action-message/program-rule-action-message.html
@@ -1,7 +1,4 @@
-<div class="item-card">
-  message : {{ message }}
-  <br> isOnComplete : {{ isOnComplete }}
-  <br> messageType : {{ messageType }}
-  <br> icon : {{ icon }}
-  <br>
+<div [ngClass]="programRuleActionMessage.messageType == 'error'? 'error' : 'warning'">
+  <ion-icon [color]="programRuleActionMessage.messageType == 'error'? 'danger' : 'current'" [name]="programRuleActionMessage.messageType == 'error'? 'alert' : 'warning'"></ion-icon>
+  {{ programRuleActionMessage.message }}
 </div>
