--- a/src/pages/event-capture/components/event-coordinate-selector/event-coordinate-selector.html
+++ b/src/pages/event-capture/components/event-coordinate-selector/event-coordinate-selector.html
@@ -12,7 +12,7 @@
     </ion-col>
     <ion-col col-auto>
       <div float-right>
-        <button color="danger" outline ion-button [disabled]="(position.lat == '' && position.lng == '')" (tap)="clearValue()">
+        <button color="danger" padding outline ion-button [disabled]="(position.lat == '' && position.lng == '')" (tap)="clearValue()">
           <ion-icon name="trash" color="danger"></ion-icon>
         </button>
         <div class="item-card" color="font-color" ion-button clear text-justify (click)="openMap()">
