--- a/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
+++ b/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
@@ -1,22 +1,20 @@
 <div class="custom-entry-form">
   <div [innerHTML]="_htmlMarkup"></div>
 </div>
-
-
 <div>
   <ion-row>
     <ion-col col-6 col-sm-6>
       <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted"
         (tap)="updateDataSetCompleteness()">
         <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning" [translate]="'Completing'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted" [translate]="'Completing'"></span>
       </button>
     </ion-col>
     <ion-col col-6 col-sm-6>
       <button color="danger" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || !isDataSetCompleted"
         (tap)="updateDataSetCompleteness()">
         <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Undo complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning" [translate]="'Undo completing'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted" [translate]="'Undo completing'"></span>
       </button>
     </ion-col>
   </ion-row>
