--- a/src/pages/data-entry/components/data-entry-pagination/data-entry-pagination.html
+++ b/src/pages/data-entry/components/data-entry-pagination/data-entry-pagination.html
@@ -14,38 +14,41 @@
     <ion-col col-5 col-sm-8 *ngIf="!isDataSetCompleted">
       <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
         <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning" [translate]="'Completing'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted" [translate]="'Completing'"></span>
       </button>
     </ion-col>
     <ion-col col-5 col-sm-8 *ngIf="isDataSetCompleted">
       <button color="danger" round ion-button full [disabled]="isDataSetCompletenessProcessRunning" (tap)="updateDataSetCompleteness()">
         <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Undo complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning" [translate]="'Undo completing'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted" [translate]="'Undo completing'"></span>
       </button>
     </ion-col>
   </ion-row>
 
   <ion-row *ngIf="entryFormSectionsCount == 1 || (entryFormType && entryFormType == 'CUSTOM') ">
     <ion-col col-6 col-sm-6>
-      <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted" (tap)="updateDataSetCompleteness()">
+      <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted"
+        (tap)="updateDataSetCompleteness()">
         <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning" [translate]="'Completing'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted" [translate]="'Completing'"></span>
       </button>
     </ion-col>
     <ion-col col-6 col-sm-6>
-      <button color="danger" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || !isDataSetCompleted" (tap)="updateDataSetCompleteness()">
+      <button color="danger" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || !isDataSetCompleted"
+        (tap)="updateDataSetCompleteness()">
         <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Undo complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning" [translate]="'Undo completing'"></span>
+        <span *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted [translate]="'Undo completing'"></span>
       </button>
     </ion-col>
   </ion-row>
-  <div *ngIf="!isDataSetCompletenessProcessRunning">
-    <div *ngIf="dataSetsCompletenessInfo && dataSetsCompletenessInfo.complete">
-      <div class="item-card animated fadeIn" padding-bottom padding-top (click)="viewUserCompletenessInformation(dataSetsCompletenessInfo)">
-        <span [translate]="'Completed by'"></span>
-        <b>{{ dataSetsCompletenessInfo.storedBy }}</b> {{'on'|translate }}
-        <b>{{ dataSetsCompletenessInfo.date }}</b>
-      </div>
-    </div>
-  </div>
+  <div *ngIf="
+          !isDataSetCompletenessProcessRunning">
+          <div *ngIf="dataSetsCompletenessInfo && dataSetsCompletenessInfo.complete">
+            <div class="item-card animated fadeIn" padding-bottom padding-top (click)="viewUserCompletenessInformation(dataSetsCompletenessInfo)">
+              <span [translate]="'Completed by'"></span>
+              <b>{{ dataSetsCompletenessInfo.storedBy }}</b> {{'on'|translate }}
+              <b>{{ dataSetsCompletenessInfo.date }}</b>
+            </div>
+          </div>
+</div>
 </div>
